add form crear-cuenta

--- a/views/crear-cuenta.ejs
+++ b/views/crear-cuenta.ejs
@@ -1,1 +1,29 @@
-<H1>Crear Cuenta</H1>
+<main class="contenedor contenedor-formularios">
+    <h1><%-nombrePagina%></h1>
+
+    <form action="/crear-cuenta" method="POST" class="default-form">
+        <div class="campo">
+            <label>E-mail</label>
+            <input type="email" name="email" placeholder="Tu E-mail" required>
+        </div>
+
+        <div class="campo">
+            <label>Nombre</label>
+            <input type="text" name="nombre" placeholder="Tu Nombre" required>
+        </div>
+
+        <div class="campo">
+            <label>Contraseña</label>
+            <input type="password" name="password" placeholder="Tu Contraseña" required>
+        </div>
+
+        <div class="campo">
+            <label>Confirmar Contraseña</label>
+            <input type="password" name="confirmar" placeholder="Repite tu Contraseña" required>
+        </div>
+
+        <div class="campo enviar">
+            <input type="submit" class="btn btn-rosa" value="Crear Cuenta">
+        </div>
+    </form>
+</main>
