add error handling in creating account

--- a/views/crear-cuenta.ejs
+++ b/views/crear-cuenta.ejs
@@ -4,22 +4,22 @@
     <form action="/crear-cuenta" method="POST" class="default-form">
         <div class="campo">
             <label>E-mail</label>
-            <input type="email" name="email" placeholder="Tu E-mail" required>
+            <input type="email" name="email" placeholder="Tu E-mail">
         </div>
 
         <div class="campo">
             <label>Nombre</label>
-            <input type="text" name="nombre" placeholder="Tu Nombre" required>
+            <input type="text" name="nombre" placeholder="Tu Nombre">
         </div>
 
         <div class="campo">
             <label>Contraseña</label>
-            <input type="password" name="password" placeholder="Tu Contraseña" required>
+            <input type="password" name="password" placeholder="Tu Contraseña">
         </div>
 
         <div class="campo">
             <label>Confirmar Contraseña</label>
-            <input type="password" name="confirmar" placeholder="Repite tu Contraseña" required>
+            <input type="password" name="confirmar" placeholder="Repite tu Contraseña">
         </div>
 
         <div class="campo enviar">
