--- a/views/nuevo-grupo.ejs
+++ b/views/nuevo-grupo.ejs
@@ -3,7 +3,7 @@
         <%= nombrePagina %>
     </h1>
 
-    <form action="/nuevo-grupo" method="POST" class="default-form">
+    <form action="/nuevo-grupo" method="POST" class="default-form" enctype="multipart/form-data">
         <div class="campo">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" placeholder="Nombre del grupo">
