add editGroup, editImage

--- a/views/iniciar-sesion.ejs
+++ b/views/iniciar-sesion.ejs
@@ -4,12 +4,12 @@
     <form action="/iniciar-sesion" method="POST" class="default-form">
         <div class="campo">
             <label>E-mail</label>
-            <input type="email" name="email" placeholder="Tu E-mail">
+            <input type="email" name="email" placeholder="Tu E-mail" value="giogarrido.ti@gmail.com">
         </div>
 
         <div class="campo">
             <label>Contraseña</label>
-            <input type="password" name="password" placeholder="Tu Contraseña">
+            <input type="password" name="password" placeholder="Tu Contraseña" value="gio123">
         </div>
 
         <div class="campo enviar">
