--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,7 +23,7 @@
         </a>
 
         <nav class="nav">
-            <a href="#">Crear Grupo</a>
+            <a href="/nuevo-grupo">Crear Grupo</a>
             <a href="/iniciar-sesion">Iniciar Sesión</a>
             <a href="/crear-cuenta">Registrarse</a>
         </nav>
@@ -45,7 +45,7 @@
         <footer class="site-footer contenedor">
 
             <nav class="nav">
-                <a href="#">Crear Grupo</a>
+                <a href="/nuevo-grupo">Crear Grupo</a>
                 <a href="/iniciar-sesion">Iniciar Sesión</a>
                 <a href="/crear-cuenta">Registrarse</a>
             </nav>
