--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -1,5 +1,7 @@
 <main class="contenedor panel-administracion">
-    <h1><%= nombrePagina %></h1>
+    <h1>
+        <%= nombrePagina %>
+    </h1>
     <div class="contenedor-botones">
         <a href="/nuevo-grupo" class="btn btn-amarillo">Nuevo Grupo</a>
         <a href="/nuevo-meeti" class="btn btn-azul">Nuevo Meeti</a>
@@ -38,28 +40,30 @@
     </div>
     <div class="seccion-admin">
         <h2>Tus Grupos</h2>
-        <ul>
-            <li>
-                <div class="informacion-admin">
-                    <h3>Desarrollo Web</h3>
-                </div>
-                <div class="acciones contenedor-botones">
-                    <a href="#" class="btn btn-verde">Editar</a>
-                    <a href="#" class="btn btn-azul2">Imagen</a>
-                    <a href="#" class="btn btn-rojo">Eliminar</a>
-                </div>
-            </li>
-            <li>
-                <div class="informacion-admin">
-                    <h3>Marketing Digital</h3>
-                </div>
-                <div class="acciones contenedor-botones">
-                    <a href="#" class="btn btn-verde">Editar</a>
-                    <a href="#" class="btn btn-azul2">Imagen</a>
-                    <a href="#" class="btn btn-rojo">Eliminar</a>
-                </div>
-            </li>
-        </ul>
+        <% if (grupos.length) { %>
+
+
+            <ul>
+                <% grupos.forEach(grupo=> {%>
+                    <li>
+                        <div class="informacion-admin">
+                            <h3>
+                                <%= grupo.nombre %>
+                            </h3>
+                        </div>
+                        <div class="acciones contenedor-botones">
+                            <a href="/editar-grupo/<%= grupo.id %>" class="btn btn-verde">Editar</a>
+                            <a href="/imagen-grupo/<%= grupo.id %>" class="btn btn-azul2">Imagen</a>
+                            <a href="/eliminar-grupo/<%= grupo.id %>" class="btn btn-rojo">Eliminar</a>
+                        </div>
+                    </li>
+                    <% }) %>
+
+            </ul>
+            <% } else { %>
+                <p>No tienes grupos aún</p>
+                <% } %>
+
 
     </div>
 </main>
