--- a/views/editar-grupo.ejs
+++ b/views/editar-grupo.ejs
@@ -3,15 +3,15 @@
         <%= nombrePagina %>
     </h1>
 
-    <form action="/nuevo-grupo" method="POST" class="default-form" enctype="multipart/form-data">
+    <form method="POST" class="default-form" >
         <div class="campo">
             <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" placeholder="Nombre del grupo">
+            <input type="text" value="<%= grupo.nombre %>" id="nombre" name="nombre" placeholder="Nombre del grupo">
         </div>
         <div class="campo descripcion">
             <label for="descripcion">Descripción</label>
             <div class="contenedor-editor">
-                <input type="hidden" id="x" name="descripcion">
+                <input type="hidden" id="x" name="descripcion" value="<%= grupo.descripcion %>">
                 <trix-editor input="x"></trix-editor>
 
             </div>
@@ -21,20 +21,23 @@
             <select name="categoriaId" id="categoria">
                 <option value="" disabled selected>-- Elige una categoría --</option>
                 <% categorias.forEach(categoria => { %>
-                    <option value="<%= categoria.id %>"><%= categoria.nombre %></option>
+                    <option 
+                        value="<%= categoria.id %>"
+                        <% if(categoria.id === grupo.categoriaId) { %>
+                            selected
+                        <% } %>
+                    ><%= categoria.nombre %></option>
                 <% }) %>
+
             </select>
         </div>
-        <div class="campo">
-            <label for="imagen">imagen</label>
-            <input type="file" id="imagen" name="imagen">
-        </div>
+
         <div class="campo">
             <label for="url">Sitio Web</label>
-            <input type="url" id="url" name="url" placeholder="Sitio web">
+            <input value="<%= grupo.url %>" type="url" id="url" name="url" placeholder="Sitio web">
         </div>
         <div class="campo enviar">
-            <input type="submit" class="btn btn-rosa" value="Crear Grupo">
+            <input type="submit" class="btn btn-rosa" value="Guardar Cambios">
         </div>
     </form>
 </main>
