--- a/views/nuevo-grupo.ejs
+++ b/views/nuevo-grupo.ejs
@@ -26,7 +26,7 @@
             </select>
         </div>
         <div class="campo">
-            <label for="imagen">imagen</label>
+            <label for="imagen">Imagen</label>
             <input type="file" id="imagen" name="imagen">
         </div>
         <div class="campo">
