--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -10,7 +10,7 @@
     </div>
 
     <div class="seccion-admin">
-        <h2>Tus Meetis</h2>
+        <h2>Tus Meeti´s</h2>
         <ul>
             <li>
                 <div class="informacion-admin">
